--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,7 @@ jobs:
           command: sudo chmod +x ./setBuildProperties; ./setBuildProperties $CIRCLE_BUILD_NUM
       - run:
           name: Build Binaries
-          command: ./gradlew assembleDebug
+          command: ./gradlew assembleDebug;mv app/build/outputs/apk/debug/app-debug.apk app/build/outputs/apk/debug/app-debug-${CIRCLE_BUILD_NUM}.apk
       - store_artifacts:
           path: app/build/outputs/apk/debug
           destination: apk
