--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,11 +41,11 @@ jobs:
           name: Build Binaries
           command: ./gradlew assembleDebug;mv app/build/outputs/apk/debug/app-debug.apk app/build/outputs/apk/debug/ComposeTemplateM2-debug-${CIRCLE_BUILD_NUM}.apk
       - slack/notify:
-          channel: C047QPNRCUW
+          channel: $SLACK_ACCESS_TOKEN_M2
           event: fail
           template: basic_fail_1
       - slack/notify:
-          channel: C047QPNRCUW
+          channel: $SLACK_ACCESS_TOKEN_M2
           event: pass
           template: basic_success_1
       - store_artifacts:
