--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,8 +3,8 @@ accompanist = "0.28.0"
 activityCompose = "1.6.1"
 androidGradlePlugin = "7.3.1"
 androidxComposeBom = "2022.12.00"
+androidxComposeCompiler = "1.3.2"
 coil = "2.2.2"
-compose = "1.3.0"
 composeMaterial3 = "1.0.0"
 constraintLayoutCompose = "1.0.1"
 coreKtx = "1.8.0"
