--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ orbs:
   slack: circleci/slack@4.10.1
 jobs:
   build:
-    working_directory: ~/ComposeTemplate
+    working_directory: ~/ComposeSingleTemplate
     docker:
       - image: cimg/android:2022.12
     environment:
